# termin-parser

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: _check.yml  heartbeat.yml  monitor-adhs.yml  monitor-autism.yml  monitor.yml
src/clinic_monitor/: __init__.py  checker.py  cli.py  config.py  monitor.py  state.py  telegram.py
tests/: test_checker.py  test_integration_fixture.py  test_jitter.py  test_monitor.py  test_state.py  test_window.py
tests/fixtures/: terminland_available.html
