[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-monitor"
version = "0.1.0"
description = "Monitor a clinic appointment page for free slots and notify via Telegram."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.44",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
clinic-monitor = "clinic_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
